--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="styles.css">
-    <title>Mi Lista de Tareas</title>
+    <link rel="stylesheet" href="estilos.css">
+    <title>Lista de Tareas</title>
   </head>
 
   <body>
@@ -15,7 +15,6 @@
       <input id="ingresar-tarea">
       <button type="submit">Crear Tarea</button>
       <div id="lista-de-tareas">
-        <!-- Tareas -->
       </div>
     </div>
 
